--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pptxgenjs",
-	"version": "1.8.0-beta",
+	"version": "2.1.1",
 	"author": {
 		"name": "Brent Ely",
 		"url": "https://github.com/gitbrent/"
